--- a/style/styles.css
+++ b/style/styles.css
@@ -22,25 +22,20 @@ body {
     background-size: 100% 100%;
     background-repeat: no-repeat;
     background-attachment: fixed;
-    width: 100%;
     height: 800px;
 }
 
 .menunav {
     display: flex;
+    align-items: center;
     justify-content: space-between;
     padding: 50px 12% 0;
-    color: white;
 }
 
 .menunav__title {
     font-size: 40px;
     font-weight: bold;
     color: white;
-}
-
-.menunav__menu {
-    align-self: flex-end;
 }
 
 .navbar__items {
@@ -58,18 +53,34 @@ body {
     text-decoration: underline;
 }
 
-.hero__mens--title {
-    color: white;
+.hero__container{
     position: absolute;
     top: 34%;
-    left: 11%;
+    left: 10%;
+    margin: auto;
     border: 2px solid white;
-    width: 45%;
-    height: 45%;
-    font-size: 80px;
+    width: 100%;
+    max-width: 450px;
+    padding: 30px;
+}
+
+@media screen and (max-width:600px){
+    .hero__container{
+        top: 34%;
+        left: 0;
+        right:0;
+        margin:auto;
+    }
+    .navbar__items {
+      display: none;
+    }
+}
+
+.hero__mens--title {
+    color: white;
+    font-size: 60px;
     font-weight: 300;
     text-transform: uppercase;
-    padding: 50px 30px 20px 20px;
 }
 
 .principal {
@@ -80,44 +91,58 @@ body {
 .article {
     position: relative;
     margin-top: 150px;
+    width: 100%;
 }
 
 .interactive__img {
     width: 70%;
+    min-width: 30rem;
 }
 
 .interactive {
     position: absolute;
-    right: -50px;
-    margin-top: 201px;
-    width: 50%;
-    height: 65%;
-    line-height: 20px;
+    bottom:0;
+    right:0;
+    display:flex;
+    flex-direction:column;
+    gap: 30px;
+    max-width:500px;
     background: white;
     border: 1px solid white;
     text-align: left;
-    padding: 100px 0 0 110px;
+    padding:80px 0 0 80px;
+}
+
+@media screen and (max-width:1200px){
+    .article {
+        display:flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction:column;
+        max-width:400px;
+        margin:auto;
+        gap:20px;
+    }
+
+    .interactive{
+        position:relative;
+        padding:0;
+    }
 }
 
 .interactive__title {
-    line-height: 50px;
     font-size: 45px;
     text-transform: uppercase;
-    height: 80px;
     font-weight: 300;
-    margin-top: 10px;
-    margin-bottom: -25px;
 }
 
 .interactive__copy {
-    width: 90%;
     line-height: 25px;
-    height: 80px;
     font-size: 15px;
     color: var(--DarkGray);
     font-weight: 500;
+    text-align:justify;
     font-family: 'Alata';
-    margin-top: 90px;
 }
 
 .gallery {
@@ -128,6 +153,7 @@ body {
 .gallery__head {
     display: flex;
     justify-content: space-between;
+    align-items:center;
 }
 
 .gallery__title {
@@ -137,19 +163,19 @@ body {
 
 .gallery__seeall {
     border: 2px solid var(--DarkGray);
-    width: 130px;
-    height: 35px;
     text-decoration: none;
     font-weight: 600;
     font-size: 12px;
-    padding: 10px 10px;
-    text-align: center;
-    line-height: 10px;
-    align-self: flex-end;
+    padding: 6px 12px;
     font-family: 'Alata';
     letter-spacing: 4px;
     border-radius: 2px;
     color: black;
+    text-align: center;
+}
+
+.gallery__seeall:hover {
+    background-color:#00000011;
 }
 
 .gallery__items {
@@ -158,13 +184,14 @@ body {
 
 .gallery__imgs {
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat(2, 1fr);
+    grid-template-columns: repeat(auto-fit, minmax(250px,1fr));
+    grid-auto-rows: auto;
+    justify-items: center;
     gap: 30px;
 }
 
 .gallery__imgs-img {
-    width: 100%;
+    max-height: 500px;
     object-fit: cover;
 }
 
@@ -173,6 +200,7 @@ body {
 }
 
 .gallery__divs:hover::after {
+    cursor:pointer;
     content: "";
     position: absolute;
     height: 100%;
@@ -191,20 +219,11 @@ body {
     position: absolute;
     left: 35px;
     bottom: 35px;
-    text-align: center;
-    display: inline-block;
-    cursor: pointer;
     font-size: 30px;
-    width: 50px;
-    text-align: left;
-}
-
-.subtitle--long {
-    width: 180px;
+    max-width: 140px;
 }
 
 .footer {
-    margin-top: 200px;
     width: 100%;
     height: 150px;
     background: black;
